2006-01-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_read_graph_edgelist)
	(R_igraph_read_graph_lgl, R_igraph_read_graph_ncol)
	(R_igraph_write_graph_edgelist, R_igraph_write_graph_lgl)
	(R_igraph_write_graph_ncol) : make these work on systems without
	fmemopen and open_memstream
	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.edgelist)
	(read.graph.lgl, read.graph.ncol, write.graph, write.graph.ncol)
	(write.graph.lgl, write.graph.edgelist) : make this work on systems 
	without fmemopen and open_memstream (eg. mswin)
	* interfaces/R/igraph/R/configwin.R (igraph.i.have.fmemopen)
	(igraph.i.have.open.memstream) : added for windows compatibility,
	configure is not run on windows

2006-01-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_pagerank) : merge confusion
	repaired

2006-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/dqueue.c (dqueue_t, igraph_dqueue_t) :
	dqueue_t renamed to igraph_dqueue_t. All functions renamed
	* src/heap.c (heap_t, igraph_heap_t) :
	heap_t renamed to igraph_heap_t. All functions renamed.
	* src/heap.c (indheap_t, igraph_indheap_t) :
	indheap_t renamed to igraph_indheap_t. All functions renamed.
	* src/heap.c (d_indheap_t, igraph_d_indheap_t) :
	d_indheap_t renamed to igraph_d_indheap_t. All functions renamed.

2006-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/matrix.c (matrix_t, igraph_matrix_t) :
	matrix_t renamed to igraph_matrix_t. All functions renamed

2006-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector_ptr.c (vector_ptr_t, igraph_vector_ptr_t) :
	vector_ptr_t renamed to igraph_vector_ptr_t. All functions renamed.

2006-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (vector_t, igraph_vector_t) :
	vector_t renamed to igraph_vector_t. All functions renamed.

2006-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (vector_which_max) : added

2006-01-06  Gabor Csardi  <csardi@rmki.kfki.hu>
